@@ -1,7 +1,10 @@
 package com.autocare360.service;
 
+import com.autocare360.dto.CapacityDistributionDto;
 import com.autocare360.dto.TaskSummaryDto;
+import com.autocare360.dto.TeamStatusDto;
 import com.autocare360.dto.WorkloadResponse;
+import com.autocare360.dto.WorkloadSummaryDto;
 import com.autocare360.entity.Appointment;
 import com.autocare360.entity.Employee;
 import com.autocare360.repo.AppointmentRepository;
@@ -15,7 +18,7 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -28,14 +31,18 @@ public class WorkloadMonitoringService {
     private final TimeLogRepository timeLogRepository;
 
     // Workload thresholds
-    private static final double NORMAL_CAPACITY = 40.0; // hours per week
-    private static final double BUSY_THRESHOLD = 0.80; // 80% capacity
-    private static final double OVERLOADED_THRESHOLD = 1.0; // 100% capacity
+    private static final double NORMAL_CAPACITY_HOURS_PER_WEEK = 40.0; // hours per week
+    private static final double BUSY_THRESHOLD = 0.80;                 // 80% capacity
+    private static final double OVERLOADED_THRESHOLD = 1.00;           // 100% capacity
+
+    // ----------------------------------------------------------------
+    // MAIN WORKLOAD QUERIES
+    // ----------------------------------------------------------------
 
     @Transactional(readOnly = true)
     public List<WorkloadResponse> getAllEmployeeWorkloads() {
-        // Use findAll() because EmployeeRepository has no findByActiveTrue()
-        List<Employee> employees = employeeRepository.findAll();
+        // In this project "ACTIVE" employees are the ones in use
+        List<Employee> employees = employeeRepository.findByStatus("ACTIVE");
 
         return employees.stream()
                 .map(this::buildWorkloadResponse)
@@ -65,43 +72,123 @@ public class WorkloadMonitoringService {
 
     @Transactional(readOnly = true)
     public List<WorkloadResponse> getWorkloadByDepartment(String department) {
-        // Employee doesn't have department; we use specialization instead
-        List<Employee> employees = employeeRepository.findAll();
+        List<Employee> employees = employeeRepository.findByStatus("ACTIVE");
 
         return employees.stream()
                 .filter(e -> e.getSpecialization() != null &&
-                        e.getSpecialization().contains(department))
+                        e.getSpecialization().toLowerCase().contains(department.toLowerCase()))
                 .map(this::buildWorkloadResponse)
                 .collect(Collectors.toList());
     }
+
+    // ----------------------------------------------------------------
+    // SUMMARY DATA FOR DASHBOARD CARDS & CHARTS
+    // ----------------------------------------------------------------
+
+    /** Used by Capacity chart on dashboard */
+    @Transactional(readOnly = true)
+    public List<CapacityDistributionDto> getCapacityDistribution() {
+        List<WorkloadResponse> workloads = getAllEmployeeWorkloads();
+
+        List<CapacityDistributionDto> list = new ArrayList<>();
+        for (WorkloadResponse w : workloads) {
+            String color;
+            switch (w.getWorkloadStatus()) {
+                case "OVERLOADED" -> color = "#EF4444"; // red
+                case "BUSY" -> color = "#F97316";       // orange
+                default -> color = "#22C55E";           // green
+            }
+
+            list.add(
+                    CapacityDistributionDto.builder()
+                            .employeeId(w.getEmployeeId())
+                            .name(w.getName())
+                            .capacityPercentage(w.getCapacityUtilization())
+                            .color(color)
+                            .build()
+            );
+        }
+        return list;
+    }
+
+    /** Used by "Team Status Overview" card */
+    @Transactional(readOnly = true)
+    public TeamStatusDto getTeamStatus() {
+        List<WorkloadResponse> workloads = getAllEmployeeWorkloads();
+
+        int available = 0;
+        int busy = 0;
+        int overloaded = 0;
+
+        for (WorkloadResponse w : workloads) {
+            switch (w.getWorkloadStatus()) {
+                case "OVERLOADED" -> overloaded++;
+                case "BUSY" -> busy++;
+                default -> available++;
+            }
+        }
+
+        int total = workloads.size();
+
+        return TeamStatusDto.builder()
+                .total(total)
+                .availableCount(available)
+                .busyCount(busy)
+                .overloadedCount(overloaded)
+                .build();
+    }
+
+    /** Used by summary numbers at the bottom of the Capacity section */
+    @Transactional(readOnly = true)
+    public WorkloadSummaryDto getWorkloadSummary() {
+        List<WorkloadResponse> workloads = getAllEmployeeWorkloads();
+
+        double totalCapacity = 0.0;
+        int activeItems = 0;
+        int totalEmployees = workloads.size();
+
+        for (WorkloadResponse w : workloads) {
+            totalCapacity += w.getCapacityUtilization();
+            activeItems += w.getActiveAppointments();
+        }
+
+        double avgCapacity = totalEmployees > 0 ? totalCapacity / totalEmployees : 0.0;
+        double utilization = avgCapacity; // same unit: %
+
+        return WorkloadSummaryDto.builder()
+                .totalEmployees(totalEmployees)
+                .averageCapacity(avgCapacity)
+                .activeItems(activeItems)
+                .utilizationRate(utilization)
+                .build();
+    }
+
+    // ----------------------------------------------------------------
+    // INTERNAL HELPERS
+    // ----------------------------------------------------------------
 
     private WorkloadResponse buildWorkloadResponse(Employee employee) {
         LocalDate today = LocalDate.now();
         LocalDate weekStart = today.minusDays(7);
         LocalDate monthStart = today.minusDays(30);
 
-        // Count active appointments using the repository method we added
-        int activeAppointments = appointmentRepository.countByAssignedEmployee_IdAndStatusIn(
-                employee.getId(),
-                Arrays.asList("PENDING", "IN_PROGRESS", "SCHEDULED")
-        );
+        int activeAppointments = appointmentRepository
+                .countByAssignedEmployee_IdAndStatusIn(
+                        employee.getId(),
+                        List.of("PENDING", "IN_PROGRESS", "SCHEDULED")
+                );
 
-        // Calculate hours logged
         BigDecimal hoursWeek = timeLogRepository
                 .sumHoursByEmployeeAndDateRange(employee.getId(), weekStart, today);
         BigDecimal hoursMonth = timeLogRepository
                 .sumHoursByEmployeeAndDateRange(employee.getId(), monthStart, today);
 
-        Double hoursThisWeek = hoursWeek != null ? hoursWeek.doubleValue() : 0.0;
-        Double hoursThisMonth = hoursMonth != null ? hoursMonth.doubleValue() : 0.0;
+        double hoursThisWeek = hoursWeek != null ? hoursWeek.doubleValue() : 0.0;
+        double hoursThisMonth = hoursMonth != null ? hoursMonth.doubleValue() : 0.0;
 
-        // Capacity %
-        Double capacityUtilization = calculateCapacityUtilization(hoursThisWeek);
-
-        // Workload status label
+        double capacityUtilization = calculateCapacityUtilization(hoursThisWeek);
         String workloadStatus = determineWorkloadStatus(capacityUtilization, activeAppointments);
 
-        // Upcoming and active tasks
         List<TaskSummaryDto> upcomingTasks = getUpcomingTasks(employee.getId());
         List<TaskSummaryDto> activeTasks = getActiveTasks(employee.getId());
 
@@ -111,7 +198,7 @@ public class WorkloadMonitoringService {
                 .email(employee.getEmail())
                 .department(employee.getSpecialization() != null ? employee.getSpecialization() : "General")
                 .activeAppointments(activeAppointments)
-                .activeProjects(activeAppointments) // currently same as appointments
+                .activeProjects(activeAppointments)
                 .hoursLoggedThisWeek(hoursThisWeek)
                 .hoursLoggedThisMonth(hoursThisMonth)
                 .capacityUtilization(capacityUtilization)
@@ -121,17 +208,17 @@ public class WorkloadMonitoringService {
                 .build();
     }
 
-    private Double calculateCapacityUtilization(Double hoursWorked) {
-        if (hoursWorked == null || hoursWorked == 0) {
+    private double calculateCapacityUtilization(double hoursWorkedThisWeek) {
+        if (hoursWorkedThisWeek <= 0) {
             return 0.0;
         }
-        return (hoursWorked / NORMAL_CAPACITY) * 100.0;
+        return (hoursWorkedThisWeek / NORMAL_CAPACITY_HOURS_PER_WEEK) * 100.0;
     }
 
-    private String determineWorkloadStatus(Double utilization, Integer activeCount) {
-        if (utilization >= OVERLOADED_THRESHOLD * 100 || activeCount > 5) {
+    private String determineWorkloadStatus(double utilizationPercent, int activeCount) {
+        if (utilizationPercent >= OVERLOADED_THRESHOLD * 100 || activeCount > 5) {
             return "OVERLOADED";
-        } else if (utilization >= BUSY_THRESHOLD * 100 || activeCount > 3) {
+        } else if (utilizationPercent >= BUSY_THRESHOLD * 100 || activeCount > 3) {
             return "BUSY";
         } else {
             return "AVAILABLE";
@@ -152,7 +239,6 @@ public class WorkloadMonitoringService {
     }
 
     private List<TaskSummaryDto> getActiveTasks(Long employeeId) {
-        // Use existing repository method with ordering
         List<Appointment> appointments = appointmentRepository
                 .findByAssignedEmployee_IdAndStatusOrderByDateAscTimeAsc(employeeId, "IN_PROGRESS");
 
@@ -182,7 +268,7 @@ public class WorkloadMonitoringService {
                 .status(appointment.getStatus())
                 .scheduledDate(scheduledDateTime)
                 .dueDate(dueDateTime)
-                .priority("MEDIUM") // default priority
+                .priority("MEDIUM")
                 .progress(appointment.getProgress() != null ? appointment.getProgress() : 0)
                 .vehicleInfo(vehicleInfo)
                 .build();
